--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>CucumberBasic</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>SLM2017</artifactId>
+    <version>1.0</version>
 
 
     <build>
@@ -53,9 +53,9 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
+                    <!--<descriptorRefs>-->
+                        <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
+                    <!--</descriptorRefs>-->
                     <archive>
                         <manifest>
                             <mainClass>tw.teddysoft.bdd.domain.invoice.Main</mainClass>
