--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,42 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+  <groupId>com.spotify</groupId>
+  <artifactId>docker-maven-plugin</artifactId>
+  <version>v1</version>
+  <executions>
+    <execution>
+      <id>build-image</id>
+      <phase>package</phase>
+      <goals>
+        <goal>build</goal>
+      </goals>
+    </execution>
+    <execution>
+      <id>tag-image</id>
+      <phase>package</phase>
+      <goals>
+        <goal>tag</goal>
+      </goals>
+      <configuration>
+        <image>disc9562/slm2017:v1</image>
+        <dockerDirectory>${project.basedir}</dockerDirectory>
+        <newName>disc9562/slm2017:v1</newName>
+      </configuration>
+    </execution>
+    <execution>
+      <id>push-image</id>
+      <phase>deploy</phase>
+      <goals>
+        <goal>push</goal>
+      </goals>
+      <configuration>
+        <imageName>disc9562/slm2017:v1</imageName>
+      </configuration>
+    </execution>
+  </executions>
+</plugin>
         </plugins>
     </build>
 
