--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
             <plugin>
   <groupId>com.spotify</groupId>
   <artifactId>docker-maven-plugin</artifactId>
-  <version>v1</version>
+  <version>0.4.13</version>
   <executions>
     <execution>
       <id>build-image</id>
@@ -92,7 +92,7 @@
       </goals>
       <configuration>
         <image>disc9562/slm2017:v1</image>
-        <dockerDirectory>${project.basedir}</dockerDirectory>
+        <dockerDirectory>${project.basedir}/docker</dockerDirectory>
         <newName>disc9562/slm2017:v1</newName>
       </configuration>
     </execution>
