--- a/pom.xml
+++ b/pom.xml
@@ -79,14 +79,14 @@
   <executions>
     <execution>
       <id>build-image</id>
-      <phase>package</phase>
+      <phase>build</phase>
       <goals>
         <goal>build</goal>
       </goals>
     </execution>
     <execution>
       <id>tag-image</id>
-      <phase>package</phase>
+      <phase>tag</phase>
       <goals>
         <goal>tag</goal>
       </goals>
