--- a/pom.xml
+++ b/pom.xml
@@ -50,63 +50,29 @@
                 </executions>
             </plugin>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <mainClass>tw.teddysoft.bdd.domain.invoice.Main</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                        <phase>package</phase> <!-- bind to the packaging phase -->
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
+              <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                  <phase>deploy</phase>
+                  <configuration>
+                      <target>
+                          <exec executable="docker">
+                              <arg value="build"/>
+                              <arg value="-t"/>
+                              <arg value="disc9562/slm2017:v1"/>
+                              <arg value="docker"/>
+                          </exec>
+                      </target>
+                  </configuration>
+                  <goals>
+                      <goal>run</goal>
+                  </goals>
+              </execution>
+            </executions>
             </plugin>
-            <plugin>
-  <groupId>com.spotify</groupId>
-  <artifactId>docker-maven-plugin</artifactId>
-  <version>0.4.13</version>
-  <executions>
-    <execution>
-      <id>build-image</id>
-      <phase>build</phase>
-      <goals>
-        <goal>build</goal>
-      </goals>
-    </execution>
-    <execution>
-      <id>tag-image</id>
-      <phase>tag</phase>
-      <goals>
-        <goal>tag</goal>
-      </goals>
-      <configuration>
-        <image>disc9562/slm2017:v1</image>
-        <dockerDirectory>docker</dockerDirectory>
-      </configuration>
-    </execution>
-    <execution>
-      <id>push-image</id>
-      <phase>deploy</phase>
-      <goals>
-        <goal>push</goal>
-      </goals>
-      <configuration>
-        <imageName>disc9562/slm2017:v1</imageName>
-      </configuration>
-    </execution>
-  </executions>
-</plugin>
         </plugins>
     </build>
 
