--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -66,6 +66,10 @@
                               <arg value="disc9562/slm2017:v1"/>
                               <arg value="docker"/>
                           </exec>
+                          <exec executable="docker">
+                                            <arg value="push"/>
+                                            <arg value="disc9562/slm2017:v1"/>
+                                        </exec>
                       </target>
                   </configuration>
                   <goals>
